# 3d-deep-learning

./: .gitignore  Bake.py  Bake2.py  README.md  pointnet.ipynb  requirements.txt
GraphGenerator/: AllocatorTraits.hpp  Bitmap.hpp  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DebugMemory.cpp  Main.cpp  Matrix3.hpp  Octree.hpp  Octree.ipp  PathGraph.hpp  PathGraph.ipp  PathGraphInterface.cpp  PathGraphInterface.hpp  SimpleHashMap.hpp  SimpleHashSet.hpp  Vector3.hpp
GraphGenerator/Unix/: ReservedVirtualMemory.cpp  ReservedVirtualMemory.hpp
GraphGenerator/Windows/: MonotonicAllocator.hpp  ReservedVirtualMemory.cpp  ReservedVirtualMemory.hpp
Notebooks/: Multi_View_Bitmap_Classification_Using_Octree_Based_Representations.ipynb  Multi_View_Bitmap_Classification_Using_Octree_Based_Representations_v1.ipynb  baseline.ipynb  baseline_draft.ipynb  data_processing.ipynb  graph_generation.ipynb  label_encoder.ipynb  pointnet.ipynb  texture_generation.ipynb  train-5.ipynb  train-7.ipynb  train.ipynb
Tests/: test-open3d.ipynb  test-open3d.py
Visualizer/Assets/: Line.prefab
Visualizer/Assets/Objects/: airplane_0009.asset  airplane_0238.asset  airplane_0238.off  airplane_0342.asset  airplane_0342.off  airplane_0620.asset  airplane_0620.off  mantel_0273.asset  mantel_0273.off
Visualizer/Assets/Scenes/: SampleScene.unity
Visualizer/Assets/Scripts/: PathGraphDrawer.cs
Visualizer/Assets/Scripts/Editor/: ObjectFileFormat.cs  ObjectFileFormatEditor.cs
Visualizer/ProjectSettings/: ProjectSettings.asset
